--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -7,17 +7,60 @@
   .box{
     height: 100px;
     padding: 5px;
-    background-color: gray;
+    background-color: #ffffff;
     width: 25%;
     margin: 5px auto;
     float: left;
     box-sizing: border-box;
   }
+  .fixed ul{
+    list-style: none;
+    width: 100%;
+  }
+  .fixed ul li{
+    float: left;
+    color:#ffffff;
+    margin-left: 20%;
+  }
+
+  .fixed{
+    width: 100%;
+    background-color: green;
+    position: fixed;
+    height: 50px;
+    float: left;
+    top: 0px;
+
+
+  }
 </style>
  </head>
  <body>
-   <div class="box"></div>
-   <div class="box"></div>
-   <div class="box"></div>
-   <div class="box"></div>
+   <nav class="fixed">
+   <ul>
+     <li>boton1</li>
+     <li>boton2</li>
+     <li>boton3</li>
+   </ul>
+   </nav>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, et, fuga! Recusandae repudiandae ipsa delectus incidunt, ad numquam quia. Maiores facilis deserunt, blanditiis ratione, illo reiciendis deleniti aut quia autem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum saepe, non inventore iusto consectetur excepturi? Eligendi odio, facere architecto a similique ipsum tenetur enim ut, nam, molestias in quisquam quaerat.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia amet exercitationem sapiente distinctio possimus fugit animi nobis laudantium ratione dicta officiis unde veniam eius, repellat pariatur rem perferendis, ut omnis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores neque fuga suscipit corporis. Veritatis aperiam, aliquam laboriosam, iusto deleniti quaerat placeat eligendi eum, quis dolor mollitia libero deserunt ea. Repellendus!</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus neque commodi numquam molestias ex temporibus hic, cumque doloribus voluptatem incidunt perspiciatis! Praesentium repellat, asperiores sapiente officiis corporis voluptates, soluta ipsum.
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate libero dicta nihil molestias odit non ut neque natus quia a sed, repudiandae commodi, ipsam obcaecati laudantium! Facilis, eos eius autem.</p>
+   <div class="box">
+     <img src="images/logo_desafio_latam.svg" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui magnam reiciendis aliquam labore, eius asperiores officiis, ratione inventore rem vel eum tempora aliquid, perspiciatis alias, itaque nobis facere. Ab, totam.</p>
+   </div>
+   <div class="box">
+     <img src="images/logo_desafio_latam.svg" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui magnam reiciendis aliquam labore, eius asperiores officiis, ratione inventore rem vel eum tempora aliquid, perspiciatis alias, itaque nobis facere. Ab, totam.</p>
+   </div>
+   <div class="box">
+     <img src="images/logo_desafio_latam.svg" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui magnam reiciendis aliquam labore, eius asperiores officiis, ratione inventore rem vel eum tempora aliquid, perspiciatis alias, itaque nobis facere. Ab, totam.</p>
+   </div>
+   <div class="box">
+     <img src="images/logo_desafio_latam.svg" alt="">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui magnam reiciendis aliquam labore, eius asperiores officiis, ratione inventore rem vel eum tempora aliquid, perspiciatis alias, itaque nobis facere. Ab, totam.</p>
+   </div>
  </body>
